Revert "Merge branch 'main' into fix_to_Database_Login_Dialog_KeyStore_field_enabled"
This reverts commit 4dba40124a96905caeb69e1b01cb02c1c3d0da06, reversing
changes made to 1944c4c0359ca95f129effa2cddaebece5cc93bb.