@@ -10,7 +10,6 @@ import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.os.OS;
 import org.jabref.logic.util.HeadlessExecutorService;
 import org.jabref.logic.util.NotificationService;
-import org.jabref.logic.util.strings.StringUtil;
 import org.jabref.model.entry.BibEntry;
 
 import org.slf4j.Logger;
@@ -49,8 +48,7 @@ public class PushToVim extends AbstractPushToApplication {
                   .addArgument(() -> Arrays.toString(com))
                   .log();
 
-            ProcessBuilder processBuilder = new ProcessBuilder(com);
-            final Process p = processBuilder.start();
+            final Process p = Runtime.getRuntime().exec(com);
 
             HeadlessExecutorService.INSTANCE.executeAndWait(() -> {
                 try (InputStream out = p.getErrorStream()) {
@@ -64,12 +62,9 @@ public class PushToVim extends AbstractPushToApplication {
                         LOGGER.warn("Could not read from stderr.", e);
                     }
                     // Error stream has been closed. See if there were any errors:
-                    String error = sb.toString().trim();
-                    if (!error.isEmpty()) {
-                        LOGGER.warn("Push to Vim error: {}", error);
+                    if (!sb.toString().trim().isEmpty()) {
+                        LOGGER.warn("Push to Vim error: {}", sb);
                         couldNotPush = true;
-                        sendErrorNotification(Localization.lang("Error pushing entries"),
-                                Localization.lang("Could not push to a running Vim server.") + " " + error);
                     }
                 } catch (IOException e) {
                     LOGGER.warn("Error handling std streams", e);
@@ -78,17 +73,14 @@ public class PushToVim extends AbstractPushToApplication {
         } catch (IOException excep) {
             LOGGER.warn("Problem pushing to Vim.", excep);
             couldNotCall = true;
-            sendErrorNotification(Localization.lang("Error pushing entries"),
-                    Localization.lang("Could not call executable '%0'.", commandPath) + "\n" +
-                            Localization.lang("Please check the path in the preferences.") + "\n" +
-                            (OS.OS_X ? Localization.lang("On macOS, you can use the command-line binary.") : ""));
         }
     }
 
     @Override
     public void onOperationCompleted() {
         if (couldNotPush) {
-            // Detailed error notification might have been sent already in pushEntries
+            sendErrorNotification(Localization.lang("Error pushing entries"),
+                    Localization.lang("Could not push to a running Vim server."));
         } else if (couldNotCall) {
             sendErrorNotification(Localization.lang("Error pushing entries"),
                     Localization.lang("Could not run the 'vim' program."));
@@ -107,18 +99,14 @@ public class PushToVim extends AbstractPushToApplication {
         try {
             String[] command = jumpToLineCommandlineArguments(fileName, line, column);
             if (OS.WINDOWS) {
-                // We use ProcessBuilder to avoid shell injection.
-                // 'start' is a cmd builtin, so we still need cmd /c start,
-                // but we should be careful with arguments.
-                // However, 'start' itself has special handling for double quotes (first quoted arg is title).
-                processBuilder.command("cmd.exe",
+                processBuilder.command("cmd",
                         "/c",
                         "start",
-                        "JabRef to Vim",
-                        command[0],
-                        command[1],
-                        command[2],
-                        command[3]);
+                        "",
+                        "\"%s\"".formatted(command[0]),
+                        "\"%s\"".formatted(command[1]),
+                        "\"%s\"".formatted(command[2]),
+                        "\"+normal %s|\"".formatted(Integer.toString(column)));
             } else if (OS.LINUX) {
                 processBuilder.command("gnome-terminal",
                         "--",
@@ -148,9 +136,9 @@ public class PushToVim extends AbstractPushToApplication {
         couldNotCall = false;
         notDefined = false;
 
-        commandPath = preferences.getCommandPaths().getOrDefault(this.getDisplayName(), "");
+        commandPath = preferences.getCommandPaths().get(this.getDisplayName());
 
-        if (StringUtil.isBlank(commandPath)) {
+        if ((commandPath == null) || commandPath.trim().isEmpty()) {
             notDefined = true;
             return false;
         }
@@ -159,6 +147,6 @@ public class PushToVim extends AbstractPushToApplication {
 
     @Override
     protected String[] jumpToLineCommandlineArguments(Path fileName, int line, int column) {
-        return new String[] {commandPath, "+%d".formatted(line), fileName.toString(), "+normal %d|".formatted(column)};
+        return new String[] {commandPath, "+%s".formatted(line), fileName.toString(), "+\"normal %s|\"".formatted(column)};
     }
 }
